Perkin-UAT/force-app/main/default/objects/PRICE_Master__c/PRICE_Master__c.object-meta.xml
<CustomObject>
    <label>PRICE Master</label>
    <nameField>
        <label>PRICE Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRICE Master</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>