Perkin-UAT/force-app/main/default/objects/PRICE_Master__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>