Perkin-UAT/force-app/main/default/objects/PRICE_Master__c/fields/fxAutoID__c.field-meta.xml
<CustomField>
    <fullName>fxAutoID__c</fullName>
    <displayFormat>PRICE-{000000000}</displayFormat>
    <label>fxAutoID</label>
    <type>AutoNumber</type>
</CustomField>