Perkin-UAT/force-app/main/default/objects/PRICE_Master__c/fields/fxPriceBookEntry__c.field-meta.xml
<CustomField>
    <fullName>fxPriceBookEntry__c</fullName>
    <description>This is the Link to the Price Book Entry Record</description>
    <inlineHelpText>This is the Link to the Price Book Entry Record</inlineHelpText>
    <label>fxPriceBookEntry</label>
    <type>Url</type>
</CustomField>