Perkin-UAT/force-app/main/default/objects/PRICE_Master__c/fields/PriceBook_Name__c.field-meta.xml
<CustomField>
    <fullName>PriceBook_Name__c</fullName>
    <label>PriceBook Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>