Perkin-UAT/force-app/main/default/objects/PRICE_Master__c/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <label>Product Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>