Perkin-UAT/force-app/main/default/objects/PRICE_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PriceBook_Name__c</columns>
    <columns>Product_Number__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Amount__c</columns>
    <columns>External_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>