Perkin-UAT/force-app/main/default/objects/PRICE_Master__c/listViews/Price_Master_QUICK_FILTER.listView-meta.xml
<ListView>
    <fullName>Price_Master_QUICK_FILTER</fullName>
    <columns>NAME</columns>
    <columns>PriceBook_Name__c</columns>
    <columns>Product_Number__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Amount__c</columns>
    <columns>External_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PriceBook_Name__c</field>
        <operation>contains</operation>
        <value>JPS0</value>
    </filters>
    <label>Price Master (*QUICK FILTER*)</label>
</ListView>