Perkin-UAT/force-app/main/default/objects/PRICE_Master__c/listViews/Price_Master_Start_End_Time.listView-meta.xml
<ListView>
    <fullName>Price_Master_Start_End_Time</fullName>
    <columns>NAME</columns>
    <columns>Product_Number__c</columns>
    <columns>Amount__c</columns>
    <columns>External_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>fxAutoID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>External_Id__c</field>
        <operation>startsWith</operation>
        <value>BOOMI,SFDC</value>
    </filters>
    <label>Price Master (Start-End Time)</label>
</ListView>